--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <script src="https://cdn.ckeditor.com/4.5.11/full/ckeditor.js"></script>
+    
   <app-root></app-root>
 </body>
 </html>
