Add new Library

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
   <script src="https://cdn.ckeditor.com/4.5.11/full/ckeditor.js"></script>
-    
+  <script src="node_modules/chart.js/src/chart.js"></script>
+  
   <app-root></app-root>
 </body>
 </html>
