--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <script src="https://cdn.ckeditor.com/4.5.11/full/ckeditor.js"></script>
-  <script src="node_modules/chart.js/src/chart.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
   
   <app-root></app-root>
 </body>
